--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -192,8 +192,8 @@
     "    'train_percentage': 0.8,\n",
     "    'num_epochs': 50 if not DEBUG else 2,\n",
     "    'batch_size': 32 if USING_COLAB else 4,\n",
-    "    'lr_head': 1e-3,\n",
-    "    'lr_backbone': 1e-4,\n",
+    "    'lr_head': 0.001,\n",
+    "    'lr_backbone': 0.000001,\n",
     "    'lr_step_size': 10,\n",
     "    'lr_gamma': 0.3,\n",
     "    'early_stopping_patience': 3,\n",
@@ -383,7 +383,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3054202/2131875498.py:16: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/tmp/ipykernel_3148368/2131875498.py:16: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  checkpoint = torch.load(model_path, map_location=device)\n"
      ]
     },
@@ -533,9 +533,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Run from 2024-11-03 13:26:24.580145'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a 'checkpoints' directory within the current directory\n",
     "os.makedirs('../checkpoints', exist_ok=True)\n",
@@ -550,12 +561,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Accuracy method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np  # Ensure numpy is imported\n",
+    "\n",
+    "def compute_validation_accuracy(model, val_dataloader, device):\n",
+    "    \"\"\"\n",
+    "    Computes the pixel-wise accuracy over the validation set for multiple thresholds.\n",
+    "\n",
+    "    Args:\n",
+    "        model: The trained model.\n",
+    "        val_dataloader: DataLoader for the validation set.\n",
+    "        device: The device (CPU or GPU) to perform computations on.\n",
+    "\n",
+    "    Returns:\n",
+    "        best_accuracy (float): The highest accuracy achieved across thresholds.\n",
+    "        best_threshold (float): The threshold corresponding to the best accuracy.\n",
+    "    \"\"\"\n",
+    "    model.eval()\n",
+    "    total_pixels = 0\n",
+    "    best_accuracy = 0.0\n",
+    "    best_threshold = 0.0\n",
+    "    thresholds = np.linspace(0.0, 1.0, 11)  # Thresholds from 0.0 to 1.0, inclusive\n",
+    "    threshold_correct = {threshold: 0 for threshold in thresholds}\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for inputs, labels in val_dataloader:\n",
+    "            inputs = inputs.to(device)\n",
+    "            labels = labels.to(device)\n",
+    "\n",
+    "            # Forward pass\n",
+    "            outputs = model(inputs)\n",
+    "            outputs = outputs.squeeze(1)  # Adjust dimensions if necessary\n",
+    "\n",
+    "            # Apply sigmoid to get probabilities\n",
+    "            probs = torch.sigmoid(outputs)\n",
+    "\n",
+    "            # Move tensors to CPU and flatten for numpy operations\n",
+    "            probs_np = probs.cpu().numpy().flatten()\n",
+    "            labels_np = labels.cpu().numpy().flatten()\n",
+    "\n",
+    "            total_pixels += labels_np.size\n",
+    "\n",
+    "            # Evaluate at multiple thresholds\n",
+    "            for threshold in thresholds:\n",
+    "                preds = (probs_np >= threshold).astype(np.uint8)\n",
+    "                correct = (preds == labels_np).sum()\n",
+    "                threshold_correct[threshold] += correct\n",
+    "\n",
+    "    # Compute average accuracy for each threshold\n",
+    "    for threshold in thresholds:\n",
+    "        accuracy = threshold_correct[threshold] / total_pixels\n",
+    "        if accuracy > best_accuracy:\n",
+    "            best_accuracy = accuracy\n",
+    "            best_threshold = threshold\n",
+    "\n",
+    "    return best_accuracy, best_threshold\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     " ## 8. Training Loop with wandb Logging"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -563,22 +643,12 @@
      "output_type": "stream",
      "text": [
       "Epoch 1 Validation Loss: 0.7308\n",
-      "Validation loss decreased to 0.7308, saving model.\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 28\u001b[0m\n\u001b[1;32m     25\u001b[0m loss \u001b[38;5;241m=\u001b[39m criterion(outputs, labels)\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m# Backward pass and optimization\u001b[39;00m\n\u001b[0;32m---> 28\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     29\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# Statistics\u001b[39;00m\n",
-      "File \u001b[0;32m~/Desktop/secret-runway-detection/.venv/lib/python3.12/site-packages/torch/_tensor.py:521\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    511\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    512\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    513\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[1;32m    514\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    519\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[1;32m    520\u001b[0m     )\n\u001b[0;32m--> 521\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    522\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[1;32m    523\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Desktop/secret-runway-detection/.venv/lib/python3.12/site-packages/torch/autograd/__init__.py:289\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    284\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[1;32m    286\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[1;32m    287\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    288\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 289\u001b[0m \u001b[43m_engine_run_backward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    290\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    291\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    292\u001b[0m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    293\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    294\u001b[0m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    295\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    296\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    297\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Desktop/secret-runway-detection/.venv/lib/python3.12/site-packages/torch/autograd/graph.py:769\u001b[0m, in \u001b[0;36m_engine_run_backward\u001b[0;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    767\u001b[0m     unregister_hooks \u001b[38;5;241m=\u001b[39m _register_logging_hooks_on_whole_graph(t_outputs)\n\u001b[1;32m    768\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 769\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    770\u001b[0m \u001b[43m        \u001b[49m\u001b[43mt_outputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\n\u001b[1;32m    771\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[1;32m    772\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    773\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m attach_logging_hooks:\n",
-      "File \u001b[0;32m~/Desktop/secret-runway-detection/.venv/lib/python3.12/site-packages/wandb/integration/torch/wandb_torch.py:276\u001b[0m, in \u001b[0;36mTorchHistory._hook_variable_gradient_stats.<locals>.<lambda>\u001b[0;34m(grad)\u001b[0m\n\u001b[1;32m    273\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m    274\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog_tensor_stats(grad\u001b[38;5;241m.\u001b[39mdata, name)\n\u001b[0;32m--> 276\u001b[0m handle \u001b[38;5;241m=\u001b[39m var\u001b[38;5;241m.\u001b[39mregister_hook(\u001b[38;5;28;01mlambda\u001b[39;00m grad: _callback(grad, log_track))\n\u001b[1;32m    277\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_hook_handles[name] \u001b[38;5;241m=\u001b[39m handle\n\u001b[1;32m    278\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m handle\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Best Validation Accuracy: 0.9131 at Threshold: 0.60\n",
+      "Validation loss decreased to 0.7308, saving model to ../checkpoints/Run from 2024-11-03 13:26:24.580145.pth\n",
+      "Epoch 2 Validation Loss: 0.7250\n",
+      "Best Validation Accuracy: 0.9131 at Threshold: 0.60\n",
+      "Validation loss decreased to 0.7250, saving model to ../checkpoints/Run from 2024-11-03 13:26:24.580145.pth\n",
+      "Training complete.\n"
      ]
     }
    ],
@@ -619,8 +689,7 @@
     "        # Log every 10 batches or last batch\n",
     "        if (i + 1) % 10 == 0 or i == len(train_dataloader):\n",
     "            avg_loss = running_loss / 10\n",
-    "            print(f\"[Epoch {epoch + 1}, Batch {i +\n",
-    "                  1}] Training Loss: {avg_loss:.4f}\")\n",
+    "            print(f\"[Epoch {epoch + 1}, Batch {i + 1}] Training Loss: {avg_loss:.4f}\")\n",
     "\n",
     "            # Log metrics to wandb\n",
     "            wandb.log({\n",
@@ -653,10 +722,16 @@
     "    avg_val_loss = val_loss / len(val_dataloader)\n",
     "    print(f\"Epoch {epoch + 1} Validation Loss: {avg_val_loss:.4f}\")\n",
     "\n",
-    "    # Log validation loss to wandb\n",
+    "    # Compute validation accuracy and best threshold\n",
+    "    best_accuracy, best_threshold = compute_validation_accuracy(model, val_dataloader, device)\n",
+    "    print(f\"Best Validation Accuracy: {best_accuracy:.4f} at Threshold: {best_threshold:.2f}\")\n",
+    "\n",
+    "    # Log validation loss and accuracy to wandb\n",
     "    wandb.log({\n",
     "        'epoch': epoch + 1,\n",
-    "        'validation_loss': avg_val_loss\n",
+    "        'validation_loss': avg_val_loss,\n",
+    "        'validation_accuracy': best_accuracy,\n",
+    "        'best_threshold': best_threshold\n",
     "    })\n",
     "\n",
     "    # Early Stopping Check\n",
@@ -665,8 +740,7 @@
     "        counter = 0\n",
     "        # Save the model\n",
     "        torch.save(model.state_dict(), model_save_path)\n",
-    "        print(f\"Validation loss decreased to {\n",
-    "              avg_val_loss:.4f}, saving model to {model_save_path}\")\n",
+    "        print(f\"Validation loss decreased to {avg_val_loss:.4f}, saving model to {model_save_path}\")\n",
     "    else:\n",
     "        counter += 1\n",
     "        print(f\"No improvement in validation loss for {counter} epoch(s).\")\n",
@@ -679,7 +753,7 @@
     "    # Step the scheduler\n",
     "    scheduler.step()\n",
     "\n",
-    "print(\"Training complete.\")"
+    "print(\"Training complete.\")\n"
    ]
   },
   {
@@ -698,18 +772,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Run from 2024-11-03 13:26:24.580145'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "wandb.run.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Artifact model>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a W&B Artifact for the model\n",
     "artifact = wandb.Artifact('model', type='model')\n",
@@ -723,16 +819,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd209a9cbdc0446d882f4b9a4018c5c8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='0.000 MB of 0.000 MB uploaded\\r'), FloatProgress(value=1.0, max=1.0)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>best_threshold</td><td>▁▁</td></tr><tr><td>epoch</td><td>▁█</td></tr><tr><td>validation_accuracy</td><td>▁▁</td></tr><tr><td>validation_loss</td><td>█▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>best_threshold</td><td>0.6</td></tr><tr><td>epoch</td><td>2</td></tr><tr><td>validation_accuracy</td><td>0.91309</td></tr><tr><td>validation_loss</td><td>0.725</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "You can sync this run to the cloud by running:<br/><code>wandb sync ../wandb/offline-run-20241103_132624-0pfg3b8z<code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>../wandb/offline-run-20241103_132624-0pfg3b8z/logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "wandb.finish()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
