--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -296,6 +296,12 @@
     "train_strip_numbers = strip_numbers[:split_index]\n",
     "val_strip_numbers = strip_numbers[split_index:]\n",
     "\n",
+    "wandb.config.update({\n",
+    "    'num_strips': num_strips,\n",
+    "    'train_strip_numbers': train_strip_numbers,\n",
+    "    'val_strip_numbers': val_strip_numbers,\n",
+    "})\n",
+    "\n",
     "# Collect filenames for train and test sets based on strip numbers\n",
     "train_files = []\n",
     "for strip_num in train_strip_numbers:\n",
