add gfm in, load model in nb :robot:, make new 192px dataset

--- a/notebooks/etl.ipynb
+++ b/notebooks/etl.ipynb
@@ -94,9 +94,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p>To authorize access needed by Earth Engine, open the following\n",
+       "        URL in a web browser and follow the instructions:</p>\n",
+       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/cloud-platform%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=VjHJqhwnDxAOJv9xcbrDcSzZKnqa5USWLuxhuxw2LFc&tc=XftWIrk4DBtcCHVr2SDnnvb2B9SsWxawmBMODQVQ6xs&cc=ICln8x8glwbA6KVQMeZZdTtAt2oj--fgGdx-7zV11dw>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/cloud-platform%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=VjHJqhwnDxAOJv9xcbrDcSzZKnqa5USWLuxhuxw2LFc&tc=XftWIrk4DBtcCHVr2SDnnvb2B9SsWxawmBMODQVQ6xs&cc=ICln8x8glwbA6KVQMeZZdTtAt2oj--fgGdx-7zV11dw</a></p>\n",
+       "        <p>The authorization workflow will generate a code, which you should paste in the box below.</p>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Successfully saved authorization token.\n"
+     ]
+    }
+   ],
    "source": [
     "DEBUG = True\n",
     "\n",
@@ -115,11 +140,11 @@
     "logger = logging.getLogger(__name__)\n",
     "\n",
     "# Initialize Earth Engine\n",
-    "ee.Authenticate()\n",
+    "ee.Authenticate(force=True)\n",
     "ee.Initialize()\n",
     "\n",
     "# Dirs\n",
-    "OUTPUT_DIR = Path(f'../training_data_{BUFFER_TYPE}')  # Directory to save the generated data\n",
+    "OUTPUT_DIR = Path(f'../training_data/training_data_{BUFFER_TYPE}')  # Directory to save the generated data\n",
     "IMAGE_DIR = OUTPUT_DIR / 'images'\n",
     "LABEL_DIR = OUTPUT_DIR / 'labels'\n",
     "os.makedirs(IMAGE_DIR, exist_ok=True)\n",
@@ -177,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,127 +212,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a4cfc110f0d4e2680380577c9203b18",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Processing Landing Strips:   0%|          | 0/20 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:__main__:Processing landing strip 1\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 1\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.020753248054461437, height=0.020339599716514556, ratio=1.0203370933406828\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 1 as area_0_of_strip_1.npy\n",
-      "INFO:__main__:Processing landing strip 2\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 2\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.02072236861364729, height=0.02026825031758861, ratio=1.022405401992919\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 2 as area_1_of_strip_2.npy\n",
-      "INFO:__main__:Processing landing strip 3\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 3\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:No images found in the collection for the specified date range 2015-01-01 00:00:00--2015-12-31 00:00:00 and area.\n",
-      "WARNING:__main__:No image data retrieved for area 0 of landing strip 3. Skipping.\n",
-      "INFO:__main__:Processing landing strip 4\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 4\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.020730900103174577, height=0.020261515959836274, ratio=1.0231662894459006\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 4 as area_2_of_strip_4.npy\n",
-      "INFO:__main__:Processing landing strip 5\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 5\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.02073064667749236, height=0.020261544990706426, ratio=1.0231523157291855\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 5 as area_3_of_strip_5.npy\n",
-      "INFO:__main__:Processing landing strip 6\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 6\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.020731368052267385, height=0.02026079558954308, ratio=1.0232257642916636\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 6 as area_4_of_strip_6.npy\n",
-      "INFO:__main__:Processing landing strip 7\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 7\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.020783775424987994, height=0.020413229537194155, ratio=1.0181522422563603\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 7 as area_5_of_strip_7.npy\n",
-      "INFO:__main__:Processing landing strip 8\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 8\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.020784673434178558, height=0.020412749031201827, ratio=1.0182202016204789\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 8 as area_6_of_strip_8.npy\n",
-      "INFO:__main__:Processing landing strip 9\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 9\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.020787680843810108, height=0.020408314242681413, ratio=1.0185888259371907\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 9 as area_7_of_strip_9.npy\n",
-      "INFO:__main__:Processing landing strip 10\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 10\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.020774879720747208, height=0.02040421119109581, ratio=1.0181662758819685\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 10 as area_8_of_strip_10.npy\n",
-      "INFO:__main__:Processing landing strip 11\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 11\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.02082222329089234, height=0.020418286295821986, ratio=1.0197830997772328\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 11 as area_9_of_strip_11.npy\n",
-      "INFO:__main__:Processing landing strip 12\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 12\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:No images found in the collection for the specified date range 2015-01-01 00:00:00--2015-12-31 00:00:00 and area.\n",
-      "WARNING:__main__:No image data retrieved for area 0 of landing strip 12. Skipping.\n",
-      "INFO:__main__:Processing landing strip 13\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 13\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.020709417476737713, height=0.02038102933746444, ratio=1.0161124413215787\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 13 as area_10_of_strip_13.npy\n",
-      "INFO:__main__:Processing landing strip 14\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 14\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.020709703688950754, height=0.020380808153424468, ratio=1.0161375119696137\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 14 as area_11_of_strip_14.npy\n",
-      "INFO:__main__:Processing landing strip 15\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 15\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.020704496780425075, height=0.020378397061982412, ratio=1.0160022261540398\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 15 as area_12_of_strip_15.npy\n",
-      "INFO:__main__:Processing landing strip 16\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 16\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.020702708196409958, height=0.02037876499833402, ratio=1.0158961152995494\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 16 as area_13_of_strip_16.npy\n",
-      "INFO:__main__:Processing landing strip 17\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 17\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.020673395077054124, height=0.020346973129919732, ratio=1.016042776733921\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 17 as area_14_of_strip_17.npy\n",
-      "INFO:__main__:Processing landing strip 18\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 18\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.02070837899125877, height=0.020363860773898068, ratio=1.016918118876667\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 18 as area_15_of_strip_18.npy\n",
-      "INFO:__main__:Processing landing strip 19\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 19\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:No images found in the collection for the specified date range 2016-01-01 00:00:00--2016-12-31 00:00:00 and area.\n",
-      "WARNING:__main__:No image data retrieved for area 0 of landing strip 19. Skipping.\n",
-      "INFO:__main__:Processing landing strip 20\n",
-      "INFO:__main__:Generating input area 1/1 for landing strip 20\n",
-      "INFO:secret_runway_detection.train_utils:Total overlapping areas: 0\n",
-      "WARNING:secret_runway_detection.train_utils:Input area is not square: width=0.020670803407128346, height=0.020378924911513607, ratio=1.0143225659293653\n",
-      "INFO:__main__:Saved image and label for area 0 of landing strip 20 as area_16_of_strip_20.npy\n"
+     "ename": "NameError",
+     "evalue": "name 'IMAGE_DIR' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Create the output directories if they don't exist\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(\u001b[43mIMAGE_DIR\u001b[49m, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(LABEL_DIR, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Loop over landing strips\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'IMAGE_DIR' is not defined"
      ]
     }
    ],
@@ -476,9 +392,10 @@
     "\n",
     "    # Fetch satellite image for the moved area\n",
     "    try:\n",
-    "        # Use a fixed date range where imagery is available\n",
-    "        image_data_start_date = '2020-01-01'\n",
-    "        image_data_end_date = '2021-01-01'\n",
+    "        # Use a random year between 2016 and 2021 where imagery is available\n",
+    "        random_year = random.randint(2016, 2021)\n",
+    "        image_data_start_date = f'{random_year}-01-01'\n",
+    "        image_data_end_date = f'{random_year + 1}-01-01'\n",
     "\n",
     "        input_image = input_area_to_input_image(\n",
     "            input_area=moved_area_wgs84,\n",
