send to colab :colab:

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -50,17 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No module named 'google.colab'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -76,20 +68,21 @@
     "from pathlib import Path\n",
     "import re\n",
     "\n",
-    "# If on Google colab, chdir to /content/drive/MyDrive/Secret_Runway_Detection\n",
-    "try:\n",
-    "    from google.colab import drive, userdata\n",
-    "    drive.mount('/content/drive')\n",
-    "    # Copy the 'Secret Runway Detection Challenge' folder to Colab local storage\n",
-    "    !cp -r '/content/drive/MyDrive/Secret Runway Detection Challenge/colab-stuff/' '/content/'\n",
-    "    # Change the current working directory to the notebooks folder in local storage\n",
-    "    os.chdir('/content/colab-stuff/notebooks')\n",
-    "    wandb.login(key=userdata.get('WANDB_API_KEY'))\n",
-    "    USING_COLAB = True\n",
-    "except Exception as e:\n",
-    "    print(e)\n",
-    "    USING_COLAB = False\n",
+    "# Function to check if running in Colab\n",
+    "def is_colab():\n",
+    "    try:\n",
+    "        import google.colab\n",
+    "        return True\n",
+    "    except ImportError:\n",
+    "        return False\n",
     "\n",
+    "USING_COLAB = is_colab()\n",
+    "\n",
+    "if USING_COLAB and not os.path.exists('/content/secret-runway-detection'):\n",
+    "    print(\"Cloning the secret-runway-detection repository...\")\n",
+    "    !git clone https://github.com/emilschmitz/secret-runway-detection.git /content/secret-runway-detection\n",
+    "\n",
+    "    \n",
     "# Add the src directory to the sys.path\n",
     "sys.path.append(os.path.abspath('..'))\n",
     "\n",
@@ -249,10 +242,32 @@
     "    f'../training_data_{config[\"resolution\"]}/training_data_{config[\"training_dataset\"]}')\n",
     "\n",
     "if USING_COLAB:\n",
-    "    # Unzip the training data which is at f\"{train_dir}.zip\" using python\n",
     "    import zipfile\n",
-    "    with zipfile.ZipFile(f\"{train_dir}.zip\", 'r') as zip_ref:\n",
+    "\n",
+    "    # Define the path to the training data zip on Google Drive\n",
+    "    drive_train_zip = Path(f'/content/drive/MyDrive/Secret Runway Detection Challenge/training_data_{config[\"resolution\"]}/training_data_{config[\"training_dataset\"]}.zip')\n",
+    "\n",
+    "    # Define the destination path where the zip will be copied\n",
+    "    dest_train_zip = Path(f'{train_dir}.zip')\n",
+    "\n",
+    "    # Copy the zip file from Drive to the destination\n",
+    "    print(f\"Copying training data from {drive_train_zip} to {dest_train_zip}...\")\n",
+    "    !cp \"{drive_train_zip}\" \"{dest_train_zip}\"\n",
+    "\n",
+    "    # Unzip the training data\n",
+    "    print(f\"Unzipping {dest_train_zip} to '../training_data/'...\")\n",
+    "    with zipfile.ZipFile(dest_train_zip, 'r') as zip_ref:\n",
     "        zip_ref.extractall(\"../training_data\")\n",
+    "    \n",
+    "    print(\"Training data setup completed.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "images_dir = train_dir / 'images'\n",
     "labels_dir = train_dir / 'labels'\n",
