tweaks, not learing well :sad:

--- a/notebooks/make_buffered_datasets.ipynb
+++ b/notebooks/make_buffered_datasets.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,20 +135,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zipped ../training_data_192/training_data_cross to ../training_data_192/training_data_cross.zip\n",
+      "Zipped ../training_data_192/training_data_ball to ../training_data_192/training_data_ball.zip\n",
+      "Zipped ../training_data_192/training_data_square to ../training_data_192/training_data_square.zip\n",
+      "Zipped ../training_data_192/training_data_point to ../training_data_192/training_data_point.zip\n"
+     ]
+    }
+   ],
    "source": [
-    "# For every buffer type, make a .zip file of the corresponding dir\n",
-    "import zipfile\n",
+    "import shutil\n",
+    "from pathlib import Path\n",
     "\n",
+    "# Define your buffer types and training data directory\n",
+    "TRAINING_DATA_DIR = Path('../training_data_192')  # Replace with your directory path\n",
     "\n",
     "for buffer_type in BUFFER_TYPES + ['point']:\n",
     "    buffer_dir = TRAINING_DATA_DIR / f'training_data_{buffer_type}'\n",
     "    zip_file = TRAINING_DATA_DIR / f'training_data_{buffer_type}.zip'\n",
-    "    with zipfile.ZipFile(zip_file, 'w') as z:\n",
-    "        for file in buffer_dir.iterdir():\n",
-    "            z.write(file, file.name)"
+    "    \n",
+    "    if buffer_dir.is_dir():\n",
+    "        shutil.make_archive(zip_file.with_suffix(''), 'zip', buffer_dir)\n",
+    "        print(f\"Zipped {buffer_dir} to {zip_file}\")\n",
+    "    else:\n",
+    "        print(f\"Directory {buffer_dir} does not exist.\")"
    ]
   },
   {
